# Server/Api/Git/GitBranchDetailsController.cs
@@ -34,6 +34,7 @@ public class GitBranchDetailsController(IGitToolsCommandInvoker gitToolsPowerShe
 						  Exists: upstream.Exists,
 						  BehindCount: upstream.BehindCount,
 						  HasConflict: upstream.HasConflict
-					  )
+					  ),
+			Downstream: result.DownstreamNames
 		);
 }
